[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Music/bresterMainMenu.mp3" type="AudioStream" id=2]
[ext_resource path="res://Images/mainBg.jpeg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 512.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="Panel"]
position = Vector2( 256.074, 191.801 )
scale = Vector2( 0.639816, 0.640664 )
texture = ExtResource( 3 )

[node name="lbl_Player1" type="Label" parent="."]
margin_left = 104.0
margin_top = 76.0
margin_right = 311.0
margin_bottom = 95.0
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_Player2" type="Label" parent="."]
margin_left = 339.0
margin_top = 76.0
margin_right = 546.0
margin_bottom = 95.0
text = "Player 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_name1" type="LineEdit" parent="."]
margin_left = 72.0
margin_top = 96.0
margin_right = 208.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_name2" type="LineEdit" parent="."]
margin_left = 301.0
margin_top = 96.0
margin_right = 437.0
margin_bottom = 120.0

[node name="btn_Start" type="Button" parent="."]
margin_left = 128.0
margin_top = 292.0
margin_right = 352.0
margin_bottom = 372.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Exit" type="Button" parent="."]
margin_left = 360.0
margin_top = 324.0
margin_right = 465.0
margin_bottom = 372.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.5
margin_top = 40.0
margin_right = 49.5
margin_bottom = 54.0
text = "Brester Conflict"

[connection signal="gui_input" from="input_name1" to="." method="_on_input_name1_gui_input"]
[connection signal="text_changed" from="input_name1" to="." method="_on_input_name1_text_changed"]
[connection signal="text_changed" from="input_name2" to="." method="_on_input_name2_text_changed"]
[connection signal="mouse_entered" from="btn_Start" to="." method="_on_btn_Start_mouse_entered"]
[connection signal="pressed" from="btn_Start" to="." method="_on_btn_Start_pressed"]
[connection signal="pressed" from="btn_Exit" to="." method="_on_btn_Exit_pressed"]
